src/tests/krate/publish/snapshots/all__krate__publish__max_size__new_krate_too_big.snap
---
source: src/tests/krate/publish/max_size.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "uploaded tarball is malformed or too large when decompressed"
    }
  ]
}
