src/tests/krate/publish/snapshots/all__krate__publish__max_size__tarball_bigger_than_max_upload_size.snap
---
source: src/tests/krate/publish/max_size.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "max upload size is: 5242880"
    }
  ]
}
